# wordle_clone

./: .gitignore  CMakeLists.txt  README.md
include/game/: g_scene.h  g_scene_game.h  g_scene_menu.h
include/hf/: hf_vec.h
lib/sdl/: SDL2main.lib
src/: main.c
